# go2nix

./: .envrc  .gitignore  .golangci.yml  LICENSE  README.md  devshell.nix  flake.nix  formatter.nix  lib.nix  package.nix
.github/scripts/: check-godebug-table.go
.github/workflows/: benchmark.yml  check-godebug-table.yml  check-godebug-upstream.yml  deploy-mdbook.yml  golangci-lint.yml
backlog/: README.md  coverage-dynamic-nwg-drawer-link.md  coverage-pie-buildmode.md  feat-gofips140-snapshot.md  feat-vendor-directory.md  perf-dag-cache-revival.md  refactor-clisource-excludes-tests.md  refactor-dead-cgo-markers.md  refactor-lockfile-dynamic-deadcode.md
backlog/tried/: README.md
benchmarks/lib/: bench-common.sh
docs/: book.toml  cli-reference.md  dag-mode.md  dynamic-mode.md  go2nix-architecture.md  lockfile-format.md  recursive-nix-internals.md  vendor-mode.md
docs/book/: 404.html  benchmarking.html  builder-api.html  cli-reference.html  go2nix-architecture.html  incremental-builds.html  lockfile-format.html  nix-plugin.html  package-overrides.html  print.html  searcher-c2a407aa.js  searchindex-36bdf12f.js  test-support.html  toc-85990a7d.js  toc.html  troubleshooting.html
docs/book/modes/: default-mode.html  experimental-mode.html  index.html
docs/plans/: 2026-03-21-dag-test-phase-2-plan.md
docs/src/: SUMMARY.md  benchmarking.md  builder-api.md  cli-reference.md  go2nix-architecture.md  incremental-builds.md  introduction.md  lockfile-format.md  nix-plugin.md  package-overrides.md  test-support.md  troubleshooting.md
docs/src/internals/: README.md  compilation-pipeline.md  dynamic-derivations-todo.md  dynamic-derivations.md  recursive-nix-internals.md
docs/src/modes/: README.md  dag-mode.md  default-mode.md  dynamic-mode.md  experimental-mode.md  vendor-mode.md
go/bench-incremental/: go.mod  main.go
go/go2nix/: go.mod  go.sum  go2nix.toml  package.nix
go/go2nix_old/: go.mod  go.sum  listfiles.go  listlocalpkgs.go  main.go  package.nix
go/go2nix_old/builder/: fetch.sh  parser.nix
go2nix/: go.mod  go.sum  integration_test.go  listfiles.go  main.go  main_test.go
go2nix/builder/: default.nix
go2nix/builder/mvscheck/: mvscheck.go
gob/: go.mod
nix/: build-go-application-dynamic.nix  build-go-application.nix  build-go-binary.nix  compile.nix  fetch-go-module.nix  fetch-module.nix  helpers.nix  importcfg.nix  mk-go-env.nix  mk-go-package-set.nix  process-lockfile.nix  scope.nix  stdlib.nix
nix/dag/: default.nix  fetch-go-module.nix  process-lockfile.nix
nix/dag/hooks/: compile-go-pkg.sh  default.nix  link-go-binary.sh
nix/dynamic/: default.nix
nix/gomod2nix/: default.nix
nix/gomod2nix/install/: install.go
nix/gomod2nix/symlink/: symlink.go
nix/hooks/: compile-go-pkg.sh  default.nix  link-go-binary.sh
nix/lockfile/: default.nix  go2nix-wasm.wasm  process-lockfile.nix
nix/lockfile/hooks/: setup-go-env.sh
nixv2/: build-go-application.nix  fetch-module.nix  go-mod-parser.nix  mk-go-env.nix  scope.nix
nixv2/hooks/: compile-go-pkg.sh  default.nix  link-go-binary.sh  setup-go-env.sh
rust/: Cargo.toml
rust/crates/go2nix-wasm/: Cargo.toml
rust/crates/go2nix-wasm/benches/: process.rs
rust/crates/go2nix-wasm/src/: lib.rs
scripts/: bench-wasm  check-godebug-table.go  compare-benchmarks.py  nixpkgs-go-find  nixpkgs-go-find.nix  update-drv-canary.sh
tests/: bench-incremental.py  compile-pkg.nix  default.nix  link.nix  mkgopackageset.nix  test-ca.sh
tests/dotool/: default.nix
tests/fixtures/asm-basic/: dag.nix  go.mod  main.go
tests/fixtures/build-tags/: dag.nix  go.mod  main.go
tests/fixtures/cgo-internal-test/: dag.nix  go.mod  main.go
tests/fixtures/cxx-cgo/: dag.nix  go.mod  main.go
tests/fixtures/torture-project/: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  dag-app-full.nix  dag-app-partial.nix  dag-app-replace.nix  go.work  go.work.sum
tests/fixtures/torture-project/app-full/: go.mod  go.sum  go2nix.toml
tests/fixtures/torture-project/app-full/cmd/app-full/: BUILD.bazel
tests/fixtures/torture-project/app-partial/: go.mod  go.sum  go2nix.toml
tests/fixtures/torture-project/app-partial/cmd/app-partial/: BUILD.bazel  main.go
tests/fixtures/torture-project/app-replace/: go.mod  go.sum
tests/fixtures/torture-project/app-replace/cmd/app-replace/: BUILD.bazel  main.go
tests/fixtures/torture-project/app-untidy/: go.mod
tests/fixtures/torture-project/app-untidy/cmd/app-untidy/: BUILD.bazel  main.go
tests/fixtures/torture-project/internal/aws/: BUILD.bazel  aws.go  go.mod  go.sum
tests/fixtures/torture-project/internal/azure/: BUILD.bazel  azure.go  go.mod  go.sum
tests/fixtures/torture-project/internal/common/: BUILD.bazel  common.go  go.mod  go.sum
tests/fixtures/torture-project/internal/conflict-a/: BUILD.bazel  conflicta.go  go.mod  go.sum
tests/fixtures/torture-project/internal/conflict-b/: BUILD.bazel  conflictb.go  go.mod  go.sum
tests/fixtures/torture-project/internal/crypto/: BUILD.bazel  cryptolib.go  go.mod  go.sum
tests/fixtures/torture-project/internal/data/: BUILD.bazel  data.go  go.mod  go.sum
tests/fixtures/torture-project/internal/db/: BUILD.bazel  db.go  go.mod  go.sum
tests/fixtures/torture-project/internal/gcp/: BUILD.bazel  gcp.go  go.mod  go.sum
tests/fixtures/torture-project/internal/k8s/: BUILD.bazel  go.mod  go.sum  k8s.go
tests/fixtures/torture-project/internal/networking/: BUILD.bazel  go.mod  go.sum  networking.go
tests/fixtures/torture-project/internal/observability/: BUILD.bazel  go.mod  go.sum  observability.go
tests/fixtures/torture-project/internal/testing/: BUILD.bazel  go.mod  go.sum  testinglib.go
tests/fixtures/torture-project/internal/web/: BUILD.bazel  go.mod  go.sum  web.go
tests/nix/: app-full-go2nix.toml  bench-process-lockfile.sh  cross_platform_test.nix  fetch_go_module_test.nix  helpers_test.nix  mainsrc_replace_test.nix  modroot_dotslash_test.nix  nested_module_test.nix  testmain_badsig_test.nix
tests/nwg-drawer/: default.nix
tests/skopeo/: default.nix  go2nix.toml
tests/yubikey-agent/: default.nix
(+199 files in other folders)
