[package]
name = "go2nix-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nix-wasm-rust = { git = "https://github.com/DeterminateSystems/nix-wasm-rust" }
toml = "0.8"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "process"
harness = false
