module(
    name = "torture_project",
    version = "0.0.0",
)

bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.42.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.host()

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_work = "//:go.work")

# etcd's api/v3 module has proto-generated dirs without BUILD files.
go_deps.gazelle_override(
    path = "go.etcd.io/etcd/api/v3",
    directives = [
        "gazelle:proto disable",
    ],
    build_file_generation = "on",
)

# Version-pinned repos from replace directives.
# Run `bazel mod tidy` to populate the full use_repo list.
use_repo(
    go_deps,
    "com_github_a_h_templ",
    "com_github_alecthomas_kong",
    "com_github_allegro_bigcache_v3",
    "com_github_apache_arrow_go_v18",
    "com_github_aws_aws_sdk_go_v2",
    "com_github_aws_aws_sdk_go_v2_config",
    "com_github_aws_aws_sdk_go_v2_service_apigateway",
    "com_github_aws_aws_sdk_go_v2_service_athena",
    "com_github_aws_aws_sdk_go_v2_service_cloudformation",
    "com_github_aws_aws_sdk_go_v2_service_cloudfront",
    "com_github_aws_aws_sdk_go_v2_service_cloudwatch",
    "com_github_aws_aws_sdk_go_v2_service_cognitoidentityprovider",
    "com_github_aws_aws_sdk_go_v2_service_dynamodb",
    "com_github_aws_aws_sdk_go_v2_service_ec2",
    "com_github_aws_aws_sdk_go_v2_service_ecr",
    "com_github_aws_aws_sdk_go_v2_service_efs",
    "com_github_aws_aws_sdk_go_v2_service_eks",
    "com_github_aws_aws_sdk_go_v2_service_elasticache",
    "com_github_aws_aws_sdk_go_v2_service_elasticsearchservice",
    "com_github_aws_aws_sdk_go_v2_service_emr",
    "com_github_aws_aws_sdk_go_v2_service_firehose",
    "com_github_aws_aws_sdk_go_v2_service_glue",
    "com_github_aws_aws_sdk_go_v2_service_iam",
    "com_github_aws_aws_sdk_go_v2_service_kinesis",
    "com_github_aws_aws_sdk_go_v2_service_kms",
    "com_github_aws_aws_sdk_go_v2_service_lambda",
    "com_github_aws_aws_sdk_go_v2_service_rds",
    "com_github_aws_aws_sdk_go_v2_service_redshift",
    "com_github_aws_aws_sdk_go_v2_service_route53",
    "com_github_aws_aws_sdk_go_v2_service_s3",
    "com_github_aws_aws_sdk_go_v2_service_sagemaker",
    "com_github_aws_aws_sdk_go_v2_service_secretsmanager",
    "com_github_aws_aws_sdk_go_v2_service_ses",
    "com_github_aws_aws_sdk_go_v2_service_sfn",
    "com_github_aws_aws_sdk_go_v2_service_sns",
    "com_github_aws_aws_sdk_go_v2_service_sqs",
    "com_github_aws_aws_sdk_go_v2_service_ssm",
    "com_github_aws_aws_sdk_go_v2_service_sts",
    "com_github_aws_aws_sdk_go_v2_service_waf",
    "com_github_azure_azure_sdk_for_go_sdk_azcore",
    "com_github_azure_azure_sdk_for_go_sdk_azidentity",
    "com_github_azure_azure_sdk_for_go_sdk_data_azcosmos",
    "com_github_azure_azure_sdk_for_go_sdk_messaging_azeventhubs",
    "com_github_azure_azure_sdk_for_go_sdk_resourcemanager_compute_armcompute_v6",
    "com_github_azure_azure_sdk_for_go_sdk_resourcemanager_network_armnetwork_v6",
    "com_github_azure_azure_sdk_for_go_sdk_security_keyvault_azsecrets",
    "com_github_azure_azure_sdk_for_go_sdk_storage_azblob",
    "com_github_brianvoe_gofakeit_v7",
    "com_github_burntsushi_toml",
    "com_github_caarlos0_env_v11",
    "com_github_casbin_casbin_v2",
    "com_github_charmbracelet_bubbletea",
    "com_github_charmbracelet_lipgloss",
    "com_github_clickhouse_clickhouse_go_v2",
    "com_github_cloudflare_circl",
    "com_github_cockroachdb_pebble",
    "com_github_coocood_freecache",
    "com_github_coreos_go_oidc_v3",
    "com_github_data_dog_go_sqlmock",
    "com_github_datadog_datadog_go_v5",
    "com_github_dgraph_io_badger_v4",
    "com_github_doug_martin_goqu_v9",
    "com_github_elastic_go_elasticsearch_v8",
    "com_github_fatih_color",
    "com_github_flosch_pongo2_v6",
    "com_github_fxamacker_cbor_v2",
    "com_github_georgysavva_scany_v2",
    "com_github_gin_gonic_gin",
    "com_github_go_chi_chi_v5",
    "com_github_go_git_go_git_v5",
    "com_github_go_gorm_caches_v4",
    "com_github_go_ldap_ldap_v3",
    "com_github_go_playground_validator_v10",
    "com_github_go_playground_webhooks_v6",
    "com_github_go_redis_redis_rate_v10",
    "com_github_go_resty_resty_v2",
    "com_github_go_sql_driver_mysql",
    "com_github_goccy_go_json",
    "com_github_gofiber_fiber_v2",
    "com_github_gogo_protobuf",
    "com_github_golang_jwt_jwt_v5",
    "com_github_golang_mock",
    "com_github_google_go_github_v68",
    "com_github_gorilla_csrf",
    "com_github_gorilla_mux",
    "com_github_gorilla_sessions",
    "com_github_gorilla_websocket",
    "com_github_grafana_pyroscope_go",
    "com_github_h2non_gock",
    "com_github_hashicorp_memberlist",
    "com_github_hashicorp_raft",
    "com_github_huandu_go_sqlbuilder",
    "com_github_ibm_sarama",
    "com_github_ilyakaznacheev_cleanenv",
    "com_github_influxdata_influxdb_client_go_v2",
    "com_github_jackc_pgx_v5",
    "com_github_jarcoal_httpmock",
    "com_github_jessevdk_go_flags",
    "com_github_jmoiron_sqlx",
    "com_github_joho_godotenv",
    "com_github_julienschmidt_httprouter",
    "com_github_kelseyhightower_envconfig",
    "com_github_klauspost_compress",
    "com_github_knadh_koanf_v2",
    "com_github_labstack_echo_v4",
    "com_github_lestrrat_go_jwx_v2",
    "com_github_lib_pq",
    "com_github_linkedin_goavro_v2",
    "com_github_magefile_mage",
    "com_github_manifoldco_promptui",
    "com_github_masterminds_sprig_v3",
    "com_github_masterminds_squirrel",
    "com_github_mattn_go_sqlite3",
    "com_github_mikespook_gorbac",
    "com_github_milvus_io_milvus_sdk_go_v2",
    "com_github_mitchellh_hashstructure_v2",
    "com_github_muesli_termenv",
    "com_github_netflix_go_env",
    "com_github_numtide_go2nix_torture_internal_aws",
    "com_github_numtide_go2nix_torture_internal_azure",
    "com_github_numtide_go2nix_torture_internal_common",
    "com_github_numtide_go2nix_torture_internal_conflict_a",
    "com_github_numtide_go2nix_torture_internal_conflict_b",
    "com_github_numtide_go2nix_torture_internal_crypto",
    "com_github_numtide_go2nix_torture_internal_data",
    "com_github_numtide_go2nix_torture_internal_db",
    "com_github_numtide_go2nix_torture_internal_gcp",
    "com_github_numtide_go2nix_torture_internal_k8s",
    "com_github_numtide_go2nix_torture_internal_networking",
    "com_github_numtide_go2nix_torture_internal_observability",
    "com_github_numtide_go2nix_torture_internal_testing",
    "com_github_numtide_go2nix_torture_internal_web",
    "com_github_ollama_ollama",
    "com_github_onsi_ginkgo_v2",
    "com_github_onsi_gomega",
    "com_github_open_telemetry_opentelemetry_collector_contrib_pkg_ottl",
    "com_github_patrickmn_go_cache",
    "com_github_pelletier_go_toml_v2",
    "com_github_pgvector_pgvector_go",
    "com_github_pion_webrtc_v4",
    "com_github_pressly_goose_v3",
    "com_github_prometheus_client_golang",
    "com_github_prometheus_common",
    "com_github_prometheus_prometheus",
    "com_github_quic_go_quic_go",
    "com_github_redis_go_redis_v9",
    "com_github_rs_cors",
    "com_github_rs_zerolog",
    "com_github_sashabaranov_go_openai",
    "com_github_schollz_progressbar_v3",
    "com_github_shamaton_msgpack_v2",
    "com_github_sirupsen_logrus",
    "com_github_spf13_cobra",
    "com_github_spf13_viper",
    "com_github_stretchr_testify",
    "com_github_tmc_langchaingo",
    "com_github_traefik_yaegi",
    "com_github_twmb_franz_go",
    "com_github_uptrace_bun",
    "com_github_urfave_cli_v2",
    "com_github_valyala_fasthttp",
    "com_github_valyala_quicktemplate",
    "com_github_vmihailenco_msgpack_v5",
    "com_github_xitongsys_parquet_go",
    "com_google_cloud_go_bigquery",
    "com_google_cloud_go_bigtable",
    "com_google_cloud_go_compute_metadata",
    "com_google_cloud_go_datastore",
    "com_google_cloud_go_firestore",
    "com_google_cloud_go_iam",
    "com_google_cloud_go_logging",
    "com_google_cloud_go_pubsub",
    "com_google_cloud_go_spanner",
    "com_google_cloud_go_storage",
    "in_gopkg_yaml_v3",
    "io_entgo_ent",
    "io_etcd_go_etcd_client_v3",
    "io_gorm_driver_postgres",
    "io_gorm_gorm",
    "io_k8s_api",
    "io_k8s_apiextensions_apiserver",
    "io_k8s_apimachinery",
    "io_k8s_client_go",
    "io_k8s_sigs_controller_runtime",
    "io_nhooyr_websocket",
    "io_opentelemetry_go_contrib_instrumentation_google_golang_org_grpc_otelgrpc",
    "io_opentelemetry_go_contrib_instrumentation_net_http_otelhttp",
    "io_opentelemetry_go_otel",
    "io_opentelemetry_go_otel_exporters_otlp_otlpmetric_otlpmetricgrpc",
    "io_opentelemetry_go_otel_exporters_otlp_otlptrace",
    "io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracegrpc",
    "io_opentelemetry_go_otel_exporters_prometheus",
    "io_opentelemetry_go_otel_metric",
    "io_opentelemetry_go_otel_sdk",
    "io_opentelemetry_go_otel_sdk_metric",
    "io_opentelemetry_go_otel_trace",
    "org_golang_x_crypto",
    "org_golang_x_oauth2",
    "org_mongodb_go_mongo_driver",
    "org_uber_go_atomic",
    "org_uber_go_zap",
)
