load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "aws",
    srcs = ["aws.go"],
    importpath = "github.com/numtide/go2nix/torture/internal/aws",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/common",
        "@com_github_aws_aws_sdk_go_v2//aws",
        "@com_github_aws_aws_sdk_go_v2_config//:config",
        "@com_github_aws_aws_sdk_go_v2_service_apigateway//:apigateway",
        "@com_github_aws_aws_sdk_go_v2_service_athena//:athena",
        "@com_github_aws_aws_sdk_go_v2_service_cloudformation//:cloudformation",
        "@com_github_aws_aws_sdk_go_v2_service_cloudfront//:cloudfront",
        "@com_github_aws_aws_sdk_go_v2_service_cloudwatch//:cloudwatch",
        "@com_github_aws_aws_sdk_go_v2_service_cognitoidentityprovider//:cognitoidentityprovider",
        "@com_github_aws_aws_sdk_go_v2_service_dynamodb//:dynamodb",
        "@com_github_aws_aws_sdk_go_v2_service_ec2//:ec2",
        "@com_github_aws_aws_sdk_go_v2_service_ecr//:ecr",
        "@com_github_aws_aws_sdk_go_v2_service_efs//:efs",
        "@com_github_aws_aws_sdk_go_v2_service_eks//:eks",
        "@com_github_aws_aws_sdk_go_v2_service_elasticache//:elasticache",
        "@com_github_aws_aws_sdk_go_v2_service_elasticsearchservice//:elasticsearchservice",
        "@com_github_aws_aws_sdk_go_v2_service_emr//:emr",
        "@com_github_aws_aws_sdk_go_v2_service_firehose//:firehose",
        "@com_github_aws_aws_sdk_go_v2_service_glue//:glue",
        "@com_github_aws_aws_sdk_go_v2_service_iam//:iam",
        "@com_github_aws_aws_sdk_go_v2_service_kinesis//:kinesis",
        "@com_github_aws_aws_sdk_go_v2_service_kms//:kms",
        "@com_github_aws_aws_sdk_go_v2_service_lambda//:lambda",
        "@com_github_aws_aws_sdk_go_v2_service_rds//:rds",
        "@com_github_aws_aws_sdk_go_v2_service_redshift//:redshift",
        "@com_github_aws_aws_sdk_go_v2_service_route53//:route53",
        "@com_github_aws_aws_sdk_go_v2_service_s3//:s3",
        "@com_github_aws_aws_sdk_go_v2_service_sagemaker//:sagemaker",
        "@com_github_aws_aws_sdk_go_v2_service_secretsmanager//:secretsmanager",
        "@com_github_aws_aws_sdk_go_v2_service_ses//:ses",
        "@com_github_aws_aws_sdk_go_v2_service_sfn//:sfn",
        "@com_github_aws_aws_sdk_go_v2_service_sns//:sns",
        "@com_github_aws_aws_sdk_go_v2_service_sqs//:sqs",
        "@com_github_aws_aws_sdk_go_v2_service_ssm//:ssm",
        "@com_github_aws_aws_sdk_go_v2_service_sts//:sts",
        "@com_github_aws_aws_sdk_go_v2_service_waf//:waf",
    ],
)
