load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "common",
    srcs = ["common.go"],
    importpath = "github.com/numtide/go2nix/torture/internal/common",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_alecthomas_kong//:kong",
        "@com_github_burntsushi_toml//:toml",
        "@com_github_caarlos0_env_v11//:env",
        "@com_github_charmbracelet_bubbletea//:bubbletea",
        "@com_github_charmbracelet_lipgloss//:lipgloss",
        "@com_github_fatih_color//:color",
        "@com_github_fxamacker_cbor_v2//:cbor",
        "@com_github_goccy_go_json//:go-json",
        "@com_github_ilyakaznacheev_cleanenv//:cleanenv",
        "@com_github_jessevdk_go_flags//:go-flags",
        "@com_github_joho_godotenv//:godotenv",
        "@com_github_kelseyhightower_envconfig//:envconfig",
        "@com_github_klauspost_compress//zstd",
        "@com_github_knadh_koanf_v2//:koanf",
        "@com_github_manifoldco_promptui//:promptui",
        "@com_github_mitchellh_hashstructure_v2//:hashstructure",
        "@com_github_muesli_termenv//:termenv",
        "@com_github_netflix_go_env//:go-env",
        "@com_github_pelletier_go_toml_v2//:go-toml",
        "@com_github_schollz_progressbar_v3//:progressbar",
        "@com_github_shamaton_msgpack_v2//:msgpack",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_viper//:viper",
        "@com_github_urfave_cli_v2//:cli",
        "@com_github_vmihailenco_msgpack_v5//:msgpack",
        "@in_gopkg_yaml_v3//:yaml_v3",
    ],
)
