load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "conflict-a",
    srcs = ["conflicta.go"],
    importpath = "github.com/numtide/go2nix/torture/internal/conflict-a",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/common",
        "@com_github_cockroachdb_pebble//:pebble",
        "@com_github_dgraph_io_badger_v4//:badger",
        "@com_github_elastic_go_elasticsearch_v8//:go-elasticsearch",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_go_chi_chi_v5//:chi",
        "@com_github_go_playground_validator_v10//:validator",
        "@com_github_go_resty_resty_v2//:resty",
        "@com_github_go_sql_driver_mysql//:mysql",
        "@com_github_gofiber_fiber_v2//:fiber",
        "@com_github_gorilla_csrf//:csrf",
        "@com_github_gorilla_mux//:mux",
        "@com_github_gorilla_sessions//:sessions",
        "@com_github_gorilla_websocket//:websocket",
        "@com_github_jackc_pgx_v5//:pgx",
        "@com_github_jmoiron_sqlx//:sqlx",
        "@com_github_julienschmidt_httprouter//:httprouter",
        "@com_github_labstack_echo_v4//:echo",
        "@com_github_lib_pq//:pq",
        "@com_github_mattn_go_sqlite3//:go-sqlite3",
        "@com_github_pressly_goose_v3//:goose",
        "@com_github_redis_go_redis_v9//:go-redis",
        "@com_github_rs_cors//:cors",
        "@com_github_rs_zerolog//:zerolog",
        "@com_github_uptrace_bun//:bun",
        "@com_github_valyala_fasthttp//:fasthttp",
        "@io_etcd_go_etcd_client_v3//:client",
        "@org_mongodb_go_mongo_driver//bson",
        "@org_mongodb_go_mongo_driver//mongo",
    ],
)
