load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "crypto",
    srcs = ["cryptolib.go"],
    importpath = "github.com/numtide/go2nix/torture/internal/crypto",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/common",
        "@com_github_casbin_casbin_v2//:casbin",
        "@com_github_cloudflare_circl//sign/ed448",
        "@com_github_coreos_go_oidc_v3//oidc",
        "@com_github_go_ldap_ldap_v3//:ldap",
        "@com_github_golang_jwt_jwt_v5//:jwt",
        "@com_github_lestrrat_go_jwx_v2//jws",
        "@com_github_lestrrat_go_jwx_v2//jwt",
        "@com_github_mikespook_gorbac//:gorbac",
        "@org_golang_x_crypto//argon2",
        "@org_golang_x_crypto//bcrypt",
        "@org_golang_x_crypto//chacha20poly1305",
        "@org_golang_x_crypto//nacl/box",
        "@org_golang_x_crypto//ssh",
        "@org_golang_x_oauth2//:oauth2",
        "@org_golang_x_oauth2//google",
    ],
)
