load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "data",
    srcs = ["data.go"],
    importpath = "github.com/numtide/go2nix/torture/internal/data",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/common",
        "//internal/db",
        "@com_github_allegro_bigcache_v3//:bigcache",
        "@com_github_apache_arrow_go_v18//arrow",
        "@com_github_apache_arrow_go_v18//parquet",
        "@com_github_clickhouse_clickhouse_go_v2//:clickhouse-go",
        "@com_github_coocood_freecache//:freecache",
        "@com_github_go_redis_redis_rate_v10//:redis_rate",
        "@com_github_influxdata_influxdb_client_go_v2//:influxdb-client-go",
        "@com_github_linkedin_goavro_v2//:goavro",
        "@com_github_patrickmn_go_cache//:go-cache",
        "@com_github_xitongsys_parquet_go//reader",
    ],
)
