load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "db",
    srcs = ["db.go"],
    importpath = "github.com/numtide/go2nix/torture/internal/db",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/common",
        "@com_github_cockroachdb_pebble//:pebble",
        "@com_github_dgraph_io_badger_v4//:badger",
        "@com_github_doug_martin_goqu_v9//:goqu",
        "@com_github_elastic_go_elasticsearch_v8//:go-elasticsearch",
        "@com_github_georgysavva_scany_v2//pgxscan",
        "@com_github_go_gorm_caches_v4//:caches",
        "@com_github_go_sql_driver_mysql//:mysql",
        "@com_github_huandu_go_sqlbuilder//:go-sqlbuilder",
        "@com_github_jackc_pgx_v5//:pgx",
        "@com_github_jackc_pgx_v5//pgxpool",
        "@com_github_jmoiron_sqlx//:sqlx",
        "@com_github_lib_pq//:pq",
        "@com_github_masterminds_squirrel//:squirrel",
        "@com_github_mattn_go_sqlite3//:go-sqlite3",
        "@com_github_pressly_goose_v3//:goose",
        "@com_github_redis_go_redis_v9//:go-redis",
        "@com_github_uptrace_bun//:bun",
        "@io_entgo_ent//:ent",
        "@io_entgo_ent//dialect/sql",
        "@io_etcd_go_etcd_client_v3//:client",
        "@io_gorm_driver_postgres//:postgres",
        "@io_gorm_gorm//:gorm",
        "@org_mongodb_go_mongo_driver//bson",
        "@org_mongodb_go_mongo_driver//mongo",
    ],
)
