load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "k8s",
    srcs = ["k8s.go"],
    importpath = "github.com/numtide/go2nix/torture/internal/k8s",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/common",
        "@io_k8s_api//apps/v1:apps",
        "@io_k8s_api//autoscaling/v2:autoscaling",
        "@io_k8s_api//batch/v1:batch",
        "@io_k8s_api//certificates/v1:certificates",
        "@io_k8s_api//coordination/v1:coordination",
        "@io_k8s_api//core/v1:core",
        "@io_k8s_api//networking/v1:networking",
        "@io_k8s_api//policy/v1:policy",
        "@io_k8s_api//rbac/v1:rbac",
        "@io_k8s_api//storage/v1:storage",
        "@io_k8s_apiextensions_apiserver//pkg/apis/apiextensions/v1:apiextensions",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/labels",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_apimachinery//pkg/types",
        "@io_k8s_client_go//dynamic",
        "@io_k8s_client_go//kubernetes",
        "@io_k8s_client_go//rest",
        "@io_k8s_client_go//tools/cache",
        "@io_k8s_client_go//tools/clientcmd",
        "@io_k8s_sigs_controller_runtime//:controller-runtime",
        "@io_k8s_sigs_controller_runtime//pkg/client",
    ],
)
