load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "observability",
    srcs = ["observability.go"],
    importpath = "github.com/numtide/go2nix/torture/internal/observability",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/common",
        "@com_github_datadog_datadog_go_v5//statsd",
        "@com_github_gogo_protobuf//proto",
        "@com_github_grafana_pyroscope_go//:pyroscope-go",
        "@com_github_open_telemetry_opentelemetry_collector_contrib_pkg_ottl//:ottl",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promauto",
        "@com_github_prometheus_common//model",
        "@com_github_prometheus_prometheus//model/histogram",
        "@com_github_prometheus_prometheus//model/labels",
        "@com_github_sirupsen_logrus//:logrus",
        "@io_opentelemetry_go_contrib_instrumentation_google_golang_org_grpc_otelgrpc//:otelgrpc",
        "@io_opentelemetry_go_contrib_instrumentation_net_http_otelhttp//:otelhttp",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel_exporters_otlp_otlpmetric_otlpmetricgrpc//:otlpmetricgrpc",
        "@io_opentelemetry_go_otel_exporters_otlp_otlptrace//:otlptrace",
        "@io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracegrpc//:otlptracegrpc",
        "@io_opentelemetry_go_otel_exporters_prometheus//:prometheus",
        "@io_opentelemetry_go_otel_metric//:metric",
        "@io_opentelemetry_go_otel_sdk//trace",
        "@io_opentelemetry_go_otel_sdk_metric//:metric",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zapcore",
    ],
)
