load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "testing",
    srcs = ["testinglib.go"],
    importpath = "github.com/numtide/go2nix/torture/internal/testing",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/common",
        "@com_github_brianvoe_gofakeit_v7//:gofakeit",
        "@com_github_data_dog_go_sqlmock//:go-sqlmock",
        "@com_github_golang_mock//gomock",
        "@com_github_google_go_github_v68//github",
        "@com_github_h2non_gock//:gock",
        "@com_github_jarcoal_httpmock//:httpmock",
        "@com_github_milvus_io_milvus_sdk_go_v2//client",
        "@com_github_ollama_ollama//api",
        "@com_github_onsi_ginkgo_v2//:ginkgo",
        "@com_github_onsi_gomega//:gomega",
        "@com_github_pgvector_pgvector_go//:pgvector-go",
        "@com_github_sashabaranov_go_openai//:go-openai",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@com_github_tmc_langchaingo//llms",
    ],
)
