load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "app-partial_lib",
    srcs = ["main.go"],
    importpath = "github.com/numtide/go2nix/torture/app-partial/cmd/app-partial",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/aws",
        "//internal/common",
        "//internal/conflict-a",
        "//internal/crypto",
        "//internal/db",
    ],
)

go_binary(
    name = "app-partial",
    embed = [":app-partial_lib"],
    visibility = ["//visibility:public"],
)
